--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>epos2</name>
+  <name>omnibase</name>
   <version>0.0.0</version>
   <description>The epos2 package</description>
 
